--- a/Public/index.html
+++ b/Public/index.html
@@ -23,6 +23,6 @@
         >
       </div>
     </div>
-    <script src="/assets/js/index.js"></script>
+    <script src="Public/Assets/JS/index.js"></script>
   </body>
 </html>
